--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "prompt-sync": "^4.2.0",
     "readline": "^1.3.0"
   }
 }
